# Grandmaster

./: CMakeLists.txt  README.md  qresource.qrc  run.sh
assets/styles/: style.qss
include/: chessboard.h  constants.h
src/: chessboard.cpp  main.cpp  piece.cpp
